Name: Asdf
Synopsis: A language analogous to C with extras like type inference.
Description: A language analogous to C with extras like type inference.
Version: 0.0.1
License: BSD3
License-File: LICENSE
Author: John Van Enk <vanenkj@gmail.com> and Job Vranish <job.vranish@gmail.com>
Maintainer: Job Vranish
Stability: experimental
Category: Language
Cabal-Version: >= 1.6
Build-Type: Simple
Package-URL: http://github.com/jvranish/Asdf

Library
    Build-Depends: base >= 4 && < 5,
                   transformers  >= 0.2.2.0 && < 0.3,
                   parsec >= 3.0.1 && < 3.2,
                   indents >= 0.3.1 && < 0.4,
                   prettyclass >= 1.0 && < 1.1,
                   containers -any

    Exposed-Modules:
        Language.Asdf
        Language.Asdf.Parser
        Language.Asdf.Lexer
        Language.Asdf.AST
        Language.Asdf.Misc

    ghc-options:        -Wall
    hs-source-dirs:     src
